...
      />
      <Tabs.Screen
        name="profile"
        options={{
          title: isLoggedIn ? t('tabs.profile') : t('profile.login'),
          headerTitle: isLoggedIn ? t('tabs.profile') : t('profile.login'),
          tabBarButtonTestID: 'profile-tab',
          tabBarIcon: ({ color, size }) => (
            <Ionicons
              name={isLoggedIn ? 'person-outline' : 'log-in-outline'}
              size={size}
              color={color}
            />
...
